# ItaSoRL

./: .gitignore  CITATION.cff  FINDINGS.md  ITASORL.md  README.md  agent.py  expB2_results.json  experiment_a.py  experiment_a_l2.py  experiment_b.py  experiment_b2.py  index.html  index.template.html  patch_of_earth.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  results_io.py  ruff.toml  run_e2e.py  run_expA.py  run_expA_l2.py  run_expB2.py  run_expB2_n10.sh  run_expB_full.py  run_expB_gap.py  run_expB_kstep.py  run_expB_nonlinear.py  run_expB_surprise.py  temp.md  world.py
docs/: AUDIT_2026-07.md  FINDINGS.md  ITASORL.md  ITASORL_world_spec.md  LEARNING.md  PAPER_DRAFT.md  PAPER_OUTLINE.md  PREREGISTRATION.md  PREREGISTRATION_Bv3.md  PREREGISTRATION_C.md  PREREGISTRATION_L3.md
itasorl/: README.md  __init__.py  agent.py  agent_ac.py  behavior_audit.py  experiment_a.py  experiment_a_l2.py  experiment_a_l3.py  experiment_b.py  experiment_b2.py  experiment_c.py  experiment_c_gate1.py  logschema.py  neuroevolution.py  patch_of_earth.py  results_io.py  stats.py  surrogate_l3.py  surrogate_l3_families.py
notebooks/: colab_gpu.ipynb
ralph/: BACKLOG.md  COLAB.md  EXPERIMENT_STATUS.md  JOURNAL.md  NEXT_STEPS.md  PROMPT.md  README.md  ralph.sh
results/: README.md
scripts/: README.md  _bootstrap.py  audit_behavior_mediation.py  audit_stats_recheck.py  build_index.py  compare_expB2_artifacts.py  derisk_expC_control.py  promote_ab_summaries.py  promote_cg_rescore.py  promote_expC_summary.py  promote_expH2_summary.py  promote_heldout_artifact.py  (+23 more)
(+81 files in other folders)
